<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    android:scaleX="1"
    tools:context=".Controller.MainActivity">

...
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/listOfNotes"
        app:layout_constraintStart_toEndOf="@id/buttonMainActivityNavigationDrawer"
        app:srcCompat="@drawable/ic_baseline_access_alarm_24" />

    <ImageButton
        android:id="@+id/buttonMainActivityNavigationDrawer"
        android:layout_width="48dp"
        android:layout_height="48dp"
...
